# grpc_example

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  settings.py
README/: architecture.drawio  gRPC part I.md  gRPC part II.md  gRPC part III.md
api/: order.py
grpc_core/clients/: check.py  echo.py  order.py
grpc_core/protos/check/: check.proto  check_pb2.py  check_pb2_grpc.py
grpc_core/protos/echo/: echo.proto  echo_pb2.py  echo_pb2_grpc.py
grpc_core/protos/order/: order.proto  order_pb2.py  order_pb2.pyi  order_pb2_grpc.py
grpc_core/servers/: interceptors.py  manager.py  utils.py
grpc_core/servers/handlers/: order.py
grpc_core/servers/schemas/: order.py
grpc_core/servers/services/: check.py  echo.py  health.py  order.py
models/: order.py
