[tool.poetry]
name = "grpc-example"
version = "0.1.0"
description = "The project is for demonstration a technology of gRPC on Python"
authors = ["0xN1ck <alex97ander97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.2"
grpcio = "^1.41.1"
grpcio-tools = "^1.41.1"
fastapi = "^0.111.0"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
piccolo = {extras = ["sqlite"], version = "^1.7.0"}
pyjwt = "^2.8.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-grpc = "^0.46b0"
protobuf = "^3.20.1"
opentelemetry-exporter-jaeger-proto-grpc = "^1.21.0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-distro = "^0.46b0"
grpcio-reflection = "1.41.1"
setuptools = "65.6.3"
grpcio-health-checking = "1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
